get all matches endpoint
